--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,8 @@ services:
     ports:
       - "3001:3001"
     volumes:
-      - .:/user/app
+      - /user/app
+      - ../backend:/user/app
     links:
       - db
     networks:
@@ -26,6 +27,7 @@ services:
       - "5432:5432"
     volumes:
       - /var/lib/postgresql/data
+      - ../db:/var/lib/postgresql/data
     environment:
       - POSTGRES_USER=$USER_DATABASE
       - POSTGRES_PASSWORD=$PASSWORD_DATABASE
