--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "knex": "^2.4.2",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.12"
+    "typeorm": "^0.3.12",
+    "firebase": "^8.10.0",
+    "firebase-admin": "^8.13.0",
+    "firebase-functions": "^3.14.1"
   }
 }
