--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase": "^8.10.0",
+    "firebase-admin": "^11.6.0",
+    "firebase-functions": "^3.14.1",
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.12",
-    "firebase": "^8.10.0",
-    "firebase-admin": "^8.13.0",
-    "firebase-functions": "^3.14.1"
+    "typeorm": "^0.3.12"
   }
 }
